brighterBeginnings/src/front/styles/space.css
.carousel-0{
top: 0rem;
left: 0rem;
z-index:3;
}

.carousel-1{
    top: -1.15rem;
    left: 2.2rem;
    opacity: .4;
    z-index: 2;
}

.carousel-2{
    top: -2.5rem;
    left: 4rem;
    opacity: 0.3;
    z-index: 1;

}

.carousel-3{
    top: -3.5rem;
    left: 6rem;
    opacity: 0.2;
    z-index: 0;
}

